# EspHomeComponents

./: .gitignore  CMakeLists.txt  requirements.txt
components/batt18650stats/: Batt18650StatsComponent.cpp  Batt18650StatsComponent.h  Battery18650Stats.cpp  Battery18650Stats.h  __init__.py  binary_sensor.py  sensor.py
components/ds18powered/: Ds18PoweredComponent.cpp  Ds18PoweredComponent.h  __init__.py  sensor.py
components/wake_reason/: WakeReason.cpp  WakeReason.h  text_sensor.py
